kubernetes/account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
  labels:
    app: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account
          image: k3s.master.local:5000/account
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
        - name: mongo
          image: k3s.master.local:5000/mongo
