kubernetes/storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage
  labels:
    app: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
        - name: account
          image: k3s.master.local:5000/storage
          ports:
            - containerPort: 8080
        - name: mongo
          image: k3s.master.local:5000/mongo
