kubernetes/web-content.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showmeme-web
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: showmeme-web
          image: k3s.master.local:5000/showmeme-web
          ports:
            - containerPort: 80
