kubernetes/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
