kubernetes/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kafka
subsets:
  - addresses:
      - ip: 192.168.1.21
    ports:
      - port: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
---
apiVersion: v1
kind: Endpoints
metadata:
  name: zookeeper
subsets:
  - addresses:
      - ip: 192.168.1.21
    ports:
      - port: 2181
