kubernetes/post-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post
spec:
  selector:
    app: post
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
