kubernetes/storage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage
spec:
  selector:
    app: storage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
