kubernetes/web-content-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-content
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
